--- a/BoggleSolver.Library/BoggleSolver.Library.csproj
+++ b/BoggleSolver.Library/BoggleSolver.Library.csproj
@@ -8,4 +8,8 @@
     <PackageReference Include="Microsoft.Extensions.Options" Version="3.1.6" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Dictionary\" />
+  </ItemGroup>
+
 </Project>
