--- a/BoggleSolver.Tests/BoggleSolver.Tests.csproj
+++ b/BoggleSolver.Tests/BoggleSolver.Tests.csproj
@@ -17,4 +17,10 @@
   <ItemGroup>
     <ProjectReference Include="..\BoggleSolver.Library\BoggleSolver.Library.csproj" />
   </ItemGroup>
+
+    <ItemGroup>
+        <None Update="boggle.json">
+            <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+        </None>
+    </ItemGroup>
 </Project>
