Added ABCs vs ABCDs

--- a/BoggleSolver.Tests/BoggleSolver.Tests.csproj
+++ b/BoggleSolver.Tests/BoggleSolver.Tests.csproj
@@ -19,8 +19,8 @@
   </ItemGroup>
 
     <ItemGroup>
-        <None Update="boggle.json">
-            <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+        <None Update="Boggles.json">
+          <CopyToOutputDirectory>Always</CopyToOutputDirectory>
         </None>
     </ItemGroup>
 </Project>
